[package]
name = "tube-get"
version = "0.1.1"
authors = ["Bernd-L <git@bernd.pw>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# HTTPS
# hyper = { version = "0.14", features = ["full"] }
# hyper-tls = "0.5"
reqwest = { version = "0.11", features = ["json", "cookies", "blocking"] }
tokio = { version = "1", features = ["full"] }

# Async & parralell processing
# tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
rayon = "1.5"

# CLI
clap = "2.33.3"

# Serde
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_path_to_error = "0.1.7"

# Error handling
anyhow = "1.0"

# Parsing
regex = "1"
html-escape = "0.2.6"

# Utility
lazy_static = "1.4"
chrono = "0.4.19"


# m3u8-dl = "0.1.0"
uuid = "0.8.2"

indicatif = { version = "0.16.0", features = ["rayon"] }
